--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Music Is Fun!</title>
     <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.css">
     <link rel="stylesheet" href="assets/style.css">
-    
+
 
 
 </head>
@@ -66,7 +66,7 @@
             <span class="sr-only">Next</span>
         </a>
     </div>
-    <div>
+    <div id="search-bk">
         <div class="container">
             <div id="Template" class="row d-flex justify-content-around">
 
