--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="assets/long-3-512.png" type="image/x-icon">
     <title>Music Is Fun!</title>
     <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.css">
     <link rel="stylesheet" href="assets/style.css">
