nabar sticking to top

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             </ul>
             <form class="form-inline my-2 my-lg-0" onsubmit="app.controllers.itunesCtrl.getMusic(event)">
                 <input class="form-control mr-sm-2" name="artist" type="text" placeholder="Search">
-                <button class="btn btn-secondary my-2 my-sm-0" type="submit" id="get-music-button">Search</button>
+                <button class="btn btn-secondary my-2 my-sm-0" type="submit" id="get-music-button">GET MUSIC</button>
             </form>
         </div>
     </nav>
