--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="#">Micaiah</a>
+        <a class="navbar-brand" href="https://stiles-micaiah.github.io/">Micaiah</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01"
             aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -25,17 +25,14 @@
         <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="https://github.com/Stiles-Micaiah">GitHub <span
+                    <a class="nav-link" href="https://github.com/Stiles-Micaiah">GitHub Repos<span
                             class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://memegenerator.net/img/instances/51052155.jpg">Products</a>
+                    <a class="nav-link" href="#">Pricing</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="https://memegenerator.net/img/instances/51052155.jpg">Pricing</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="https://memegenerator.net/img/instances/51052155.jpg">About</a>
+                    <a class="nav-link" href="https://stiles-micaiah.github.io/about-instructions/">About</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0" onsubmit="app.controllers.itunesCtrl.getMusic(event)">
